hphp/test/zend/good/ext-standard-math/bug25665.php
<?php
set_time_limit(5);
var_dump(acos(1.01));
var_dump(log(0));
?>