hphp/test/zend/bad/ext/ldap/tests/bug48696.php
<?php

ldap_read(1,1,1);

?>